src/parser/snapshots/expr/incrdecr/decrement_pre_with_unary_neg.snap
---
source: src/parser/parser.rs
description: increment and decrement with correct precedence
expression: actual.unwrap()
info: "-(--a)"
---
location:
  line: 1
  column: 1
kind:
  unary:
    - negate
    - location:
        line: 1
        column: 3
      kind:
        decrement:
          is_post: false
          e:
            location:
              line: 1
              column: 5
            kind:
              variable: a
