src/parser/snapshots/expr/incrdecr/horrible_seq_1.snap
---
source: src/parser/parser.rs
description: increment and decrement with correct precedence
expression: actual.unwrap()
info: ~a++ + -++a
---
location:
  line: 1
  column: 1
kind:
  binary:
    - add
    - location:
        line: 1
        column: 1
      kind:
        unary:
          - complement
          - location:
              line: 1
              column: 2
            kind:
              increment:
                is_post: true
                e:
                  location:
                    line: 1
                    column: 2
                  kind:
                    variable:
                      name: a
                      location:
                        line: 1
                        column: 2
                      original_name: ~
    - location:
        line: 1
        column: 8
      kind:
        unary:
          - negate
          - location:
              line: 1
              column: 9
            kind:
              increment:
                is_post: false
                e:
                  location:
                    line: 1
                    column: 11
                  kind:
                    variable:
                      name: a
                      location:
                        line: 1
                        column: 11
                      original_name: ~
